rev1.0.5 * package.json, README.md updated

--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
-  "name": "browser-xml-test",
-  "version": "0.0.0",
-  "description": "Webcomponent browser-xml-test following open-wc recommendations",
-  "author": "browser-xml-test",
-  "license": "MIT",
-  "main": "index.js",
-  "module": "index.js",
-  "scripts": {
-    "start": "web-dev-server",
-    "test": "web-test-runner --coverage",
-    "test:watch": "web-test-runner --watch"
-  },
-  "dependencies": {
-    "lit-element": "^2.5.1",
-    "lit-html": "^1.4.1"
-  },
-  "devDependencies": {
-    "@open-wc/testing": "^2.5.33",
-    "@web/dev-server": "^0.1.18",
-    "@web/test-runner": "^0.12.20"
-  }
+    "name": "@xmlaspect/browser-xml-test",
+    "version": "1.0.5",
+    "description": "Webcomponent browser-xml-test following open-wc recommendations",
+    "author": {
+        "name": "Sasha Firsov",
+        "email": "suns@simulationworks.com",
+        "url": "https://blog.firsov.net/"
+    },
+    "license": "Apache-2.0",
+    "main": "index.js",
+    "module": "index.js",
+    "scripts": {
+        "start": "web-dev-server",
+        "test": "web-test-runner --coverage",
+        "test:watch": "web-test-runner --watch"
+    },
+    "devDependencies": {
+        "@open-wc/testing": "^2.5.33",
+        "@web/dev-server": "^0.1.18",
+        "@web/test-runner": "^0.13.13"
+    },
+    "dependencies": {
+        "@xmlaspect/browser-xml": "^1.0.5"
+    }
 }
